# src/controller/conversion/index.ts
@@ -2,20 +2,32 @@ import {
 	Body, Controller, Get, Path, Post, Route, Tags
 } from "tsoa"
 import { ConversionService } from "../../service/conversion"
-import { IConversionRequestBody } from "../../model"
-import { internalServerErrorStatus } from "../../constants"
+import { EHttpResponseCodes } from "../../constants"
+import {
+	IConversionProcessingResponse, IConversionRequestBody, IConversionStatusResponse
+} from "../../service/conversion/interface"
+import { Inject } from "typescript-ioc"
 @Route("/conversion")
 @Tags("Conversion")
 export class ConversionController extends Controller {
+	@Inject
+	private readonly conversionService!: ConversionService
 	@Post("/")
 	public async convertFile(
 		@Body() conversionRequestBody: IConversionRequestBody
-	): Promise<any> {
-		this.setStatus(internalServerErrorStatus)
-		return await ConversionService.convertFile(conversionRequestBody)
+	): Promise<IConversionProcessingResponse> {
+		return await this.conversionService.processConversionRequest(conversionRequestBody)
 	}
 	@Get("{fileId}")
-	public async getConvertedFile(@Path() fileId: string): Promise<any> {
-		return await ConversionService.getConvertedFile(fileId)
+	public getConvertedFile(@Path() fileId: string): IConversionStatusResponse {
+		try {
+			return this.conversionService.getConvertedFile(fileId)
+		}
+		catch (err) {
+			this.setStatus(EHttpResponseCodes.notFound)
+			return {
+				message: err.message
+			}
+		}
 	}
 }
